--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -1363,6 +1363,61 @@
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowCreate.html" />
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowDoneDetail.html" />
     <Content Include="Pages\99YeWuPingTai\01KaoQinGuanLi\KQGL9901003\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303010\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303010\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303010\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303010\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303010\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303009\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303009\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303009\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303009\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303009\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303008\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303008\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303008\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303008\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303008\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303007\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303007\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303007\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303007\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303007\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303006\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303006\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303006\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303006\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303006\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303005\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303005\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303005\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303005\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303005\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303004\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303004\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303004\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303004\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303004\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303003\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303003\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303003\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303003\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303003\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303002\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303002\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303002\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303002\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303002\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303001\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303001\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303001\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303001\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303001\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowUndoDetail.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\common.js" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowAskDetail.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowCreate.html" />
