--- a/BPMMobile/BPMMobile.csproj
+++ b/BPMMobile/BPMMobile.csproj
@@ -452,6 +452,16 @@
     <Content Include="Pages\00KCY\HQ000710\FlowCreate.html" />
     <Content Include="Pages\00KCY\HQ000710\FlowDoneDetail.html" />
     <Content Include="Pages\00KCY\HQ000710\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\YF0017004\common.js" />
+    <Content Include="Pages\00KCY\YF0017004\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\YF0017004\FlowCreate.html" />
+    <Content Include="Pages\00KCY\YF0017004\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\YF0017004\FlowUndoDetail.html" />
+    <Content Include="Pages\00KCY\YF0017005\common.js" />
+    <Content Include="Pages\00KCY\YF0017005\FlowAskDetail.html" />
+    <Content Include="Pages\00KCY\YF0017005\FlowCreate.html" />
+    <Content Include="Pages\00KCY\YF0017005\FlowDoneDetail.html" />
+    <Content Include="Pages\00KCY\YF0017005\FlowUndoDetail.html" />
     <Content Include="Pages\01WeGoHQ\00WeGoBenBu\BG0100001\FlowAskDetail.html" />
     <Content Include="Pages\01WeGoHQ\00WeGoBenBu\BG0100001\FlowCreate.html" />
     <Content Include="Pages\01WeGoHQ\00WeGoBenBu\BG0100001\FlowDoneDetail.html" />
@@ -1418,6 +1428,11 @@
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowCreate.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowDoneDetail.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYBX990303011\FlowUndoDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302001\common.js" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302001\FlowAskDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302001\FlowCreate.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302001\FlowDoneDetail.html" />
+    <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302001\FlowUndoDetail.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\common.js" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowAskDetail.html" />
     <Content Include="Pages\99YeWuPingTai\03JiTuanFeiYong\FYSQ990302002\FlowCreate.html" />
