--- a/BPMMobile/Web.config
+++ b/BPMMobile/Web.config
@@ -12,6 +12,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BPMMobile-20170516092849.mdf;Initial Catalog=aspnet-BPMMobile-20170516092849;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="BPMDB" connectionString="Data Source=172.16.3.50;Initial Catalog=BPMDB;Integrated Security=False;User ID=sa;Password=88@ABCDEFG" providerName="System.Data.SqlClient" />-->
+    <!--<add name="BPMDB" connectionString="Data Source=172.16.7.2;Initial Catalog=BPMDB;Integrated Security=False;User ID=sa;Password=wego2018@)!*" providerName="System.Data.SqlClient" />-->
     <add name="BPMDB" connectionString="Data Source=172.16.7.8;Initial Catalog=BPMDB;Integrated Security=False;User ID=sa;Password=1qaz@WSX" providerName="System.Data.SqlClient" />
     <!--<add name="BPMDB" connectionString="Data Source=172.16.3.52\BPMDATABASE;Initial Catalog=BPMDB;Integrated Security=False;User ID=sa;Password=1qaz@WSX" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
@@ -19,6 +20,7 @@
     <add key="ShowMaintenancePage" value="false" />
     <add key="MaintenanceEndDate" value="2012-05-20 17:30:00" />
     <add key="BPMServerName" value="172.16.7.8" />
+    <!--<add key="BPMServerName" value="172.16.7.1" />-->
     <!--<add key="BPMServerName" value="172.16.3.50" />-->
     <!--<add key="BPMServerName" value="172.16.3.53" />-->
     <add key="BPMServerPort" value="1590" />   
